codepkg/objects/Price_Specification_Book_Product__c.object
<CustomObject>
    <fields>
        <fullName>ACETATE_REF_NO__c</fullName>
        <label>ACETATE REF NO.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price &amp; Specification Book Products</relationshipLabel>
        <relationshipName>Price_Specification_Book_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>to indicate if a pricebook product is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Images__c</fullName>
        <description>To store additional Images to this product, which shows in  Catalog Order Quick View section</description>
        <label>Additional Images</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOARD_GRADE__c</fullName>
        <label>BOARD GRADE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_QTY__c</fullName>
        <label>BOX QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOX_REF__c</fullName>
        <label>BOX REF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_REQUIREMENT__c</fullName>
        <label>BOX REQUIREMENT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_SIZE__c</fullName>
        <label>BOX SIZE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_WEIGHT_GW__c</fullName>
        <label>BOX WEIGHT(GW)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_WEIGHT_NW__c</fullName>
        <label>BOX WEIGHT(NW)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAND__c</fullName>
        <label>BRAND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Vertical__c</fullName>
        <formula>TEXT(Product_Unique_ID__r.Business_Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIP_COLOR__c</fullName>
        <label>CLIP COLOR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIP_MATERIAL__c</fullName>
        <label>CLIP MATERIAL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIP_SIZE_TYPE__c</fullName>
        <label>CLIP SIZE/TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIP_SUPPLIER__c</fullName>
        <label>CLIP SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLOR_DOSAGE_RATE__c</fullName>
        <label>COLOR DOSAGE RATE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLOUR_REF__c</fullName>
        <label>COLOUR REF</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Ningbo</fullName>
                </value>
                <value>
                    <fullName>Tianjin</fullName>
                </value>
                <value>
                    <fullName>Dalian</fullName>
                </value>
                <value>
                    <fullName>Ho Chi Ming</fullName>
                </value>
                <value>
                    <fullName>Hanoi</fullName>
                </value>
                <value>
                    <fullName>Danang</fullName>
                </value>
                <value>
                    <fullName>Hue</fullName>
                </value>
                <value>
                    <fullName>Bandung</fullName>
                </value>
                <value>
                    <fullName>Semarang</fullName>
                </value>
                <value>
                    <fullName>Dhaka</fullName>
                </value>
                <value>
                    <fullName>Chittagong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALUMINIUM</fullName>
                </value>
                <value>
                    <fullName>BEIGE</fullName>
                </value>
                <value>
                    <fullName>BISCUIT</fullName>
                </value>
                <value>
                    <fullName>BLACK</fullName>
                </value>
                <value>
                    <fullName>BLACK/WHITE</fullName>
                </value>
                <value>
                    <fullName>BLACK &amp; WHITE</fullName>
                </value>
                <value>
                    <fullName>BLUE</fullName>
                </value>
                <value>
                    <fullName>BRONZE</fullName>
                </value>
                <value>
                    <fullName>BROWN</fullName>
                </value>
                <value>
                    <fullName>CHAMPAGNE</fullName>
                </value>
                <value>
                    <fullName>CHROME</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>CLEAR DARK BLUE</fullName>
                    <label>Clear Dark Blue</label>
                </value>
                <value>
                    <fullName>CLEAR DARK PINK</fullName>
                    <label>Clear Dark Pink</label>
                </value>
                <value>
                    <fullName>CLEAR LIGHT BLUE</fullName>
                    <label>Clear Light Blue</label>
                </value>
                <value>
                    <fullName>CLEAR LIGHT PINK</fullName>
                    <label>Clear Light Pink</label>
                </value>
                <value>
                    <fullName>COLOR</fullName>
                </value>
                <value>
                    <fullName>COLORED</fullName>
                    <label>Colored</label>
                </value>
                <value>
                    <fullName>Colour05B</fullName>
                </value>
                <value>
                    <fullName>COPPER</fullName>
                </value>
                <value>
                    <fullName>CREAM</fullName>
                </value>
                <value>
                    <fullName>CYAN</fullName>
                </value>
                <value>
                    <fullName>DARK BLUE</fullName>
                </value>
                <value>
                    <fullName>DARK PINK</fullName>
                </value>
                <value>
                    <fullName>ECRU/TAN</fullName>
                </value>
                <value>
                    <fullName>GLOSS</fullName>
                </value>
                <value>
                    <fullName>GOLD</fullName>
                </value>
                <value>
                    <fullName>GRAY</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consolidated_Style__c</fullName>
        <formula>Product_Unique_ID__r.Consolidated_Style__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consolidated Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bell CA, USA</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Ref_Model__c</fullName>
        <label>Customer Ref. Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIE_REF_STAMP_REF__c</fullName>
        <label>DIE REF/STAMP REF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Code_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Department Code Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_3__c</fullName>
        <label>Description 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_Rebate_pc__c</fullName>
        <label>EUR Rebate/pc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_Reuse_Rebate_pc__c</fullName>
        <label>EUR Reuse Rebate/pc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINISHED_RUBBER_COLOUR__c</fullName>
        <label>FINISHED RUBBER COLOUR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <label>Freight Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HANGER_FINISH__c</fullName>
        <label>HANGER FINISH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HANGER_WEIGHT__c</fullName>
        <label>HANGER WEIGHT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_CODE__c</fullName>
        <label>HOOK CODE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_COLOUR_COATING__c</fullName>
        <label>HOOK COLOUR/COATING</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_HEIGHT__c</fullName>
        <label>HOOK HEIGHT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_REFERENCE__c</fullName>
        <label>HOOK REFERENCE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_SIZE__c</fullName>
        <label>HOOK SIZE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_SUPPLIER__c</fullName>
        <label>HOOK SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOOK_TYPE__c</fullName>
        <label>HOOK TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Catalogue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked this checkbox for hidden item in Catalogue Order</description>
        <inlineHelpText>Checked this checkbox for hidden item in Catalogue Order</inlineHelpText>
        <label>Hidden Catalogue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INNER_BOX_DIMENSION_mm__c</fullName>
        <label>INNER BOX DIMENSION (mm)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>For quick search function in MagNET</inlineHelpText>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOGO_PRINT__c</fullName>
        <label>LOGO PRINT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOGO_WIDTH__c</fullName>
        <label>LOGO WIDTH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <formula>TEXT(Retailer_Code__r.Label__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <inlineHelpText>Lead time as per agree with Retailers</inlineHelpText>
        <label>Lead Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_SKU__c</fullName>
        <label>Local SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAINETTI_COLOR_SCHEME__c</fullName>
        <label>MAINETTI COLOR SCHEME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTERBATCH_TO_COLOUR_RUBBER__c</fullName>
        <label>MASTERBATCH TO COLOUR RUBBER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_BATCH_SUPPLIER__c</fullName>
        <label>MASTER BATCH SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_MIX__c</fullName>
        <label>MATERIAL MIX</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_SUPPLIER__c</fullName>
        <label>MATERIAL SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>METAL_WEIGHT_g__c</fullName>
        <label>METAL WEIGHT (g)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <label>MOQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K-RESIN</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PP/PS</fullName>
                </value>
                <value>
                    <fullName>CO-PP</fullName>
                </value>
                <value>
                    <fullName>RUBBER</fullName>
                </value>
                <value>
                    <fullName>COMPOUND</fullName>
                </value>
                <value>
                    <fullName>FOAM</fullName>
                </value>
                <value>
                    <fullName>WOOD</fullName>
                </value>
                <value>
                    <fullName>SATIN</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price/100pcs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLE_Row_Id__c</fullName>
        <label>OLE Row Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_UOM__c</fullName>
        <label>Order UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>ROLL</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>CARTON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_to_Company__c</fullName>
        <description>This is to call product selection page in Online Ordering base on the Order to Company</description>
        <label>Order to Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia - Mainetti Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Mainetti (Bangladesh) PVT Ltd</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Central Americas - H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>China - Suzhou Mainetti Plastic Products Ltd</fullName>
                </value>
                <value>
                    <fullName>Egypt - Elkekhia Group Ltd</fullName>
                </value>
                <value>
                    <fullName>Fletcher</fullName>
                </value>
                <value>
                    <fullName>France - Roybier et Fils</fullName>
                </value>
                <value>
                    <fullName>Guatemala - H.B. International Trim , S.A</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Mainetti (HK) Ltd</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Reca Mainetti Ltd</fullName>
                </value>
                <value>
                    <fullName>India - Mainetti (India) Pvt Ltd</fullName>
                </value>
                <value>
                    <fullName>Indonesia - PT. Mainetti Packaging Solution</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti Omaf Srl</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti SpA</fullName>
                </value>
                <value>
                    <fullName>Korea - Mainetti Korea Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
                <value>
                    <fullName>Morocco - Mainetti Smaco SA</fullName>
                </value>
                <value>
                    <fullName>Netherlands - Mainetti BV</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Alupak</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Mainetti Pakistan (Pvt) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Peru - Hangers Trading E.I.R.L.</fullName>
                </value>
                <value>
                    <fullName>Philippines - Lexan</fullName>
                </value>
                <value>
                    <fullName>Portugal - Mainetti Cabides, Lda</fullName>
                </value>
                <value>
                    <fullName>Romania - Mainetti Romania S.R.L.</fullName>
                </value>
                <value>
                    <fullName>Singapore - Mainetti SEA PTE LTD</fullName>
                </value>
                <value>
                    <fullName>South China / Hong Kong – Mainetti (HK) Ltd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLASTIC_WEIGHT_g__c</fullName>
        <label>PLASTIC WEIGHT (g)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINT_DRAWING_REF_NO__c</fullName>
        <label>PRINT DRAWING REF NO.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINT_MATERIAL__c</fullName>
        <label>PRINT MATERIAL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINT_REF__c</fullName>
        <label>PRINT REF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINT_SUPPLIER__c</fullName>
        <label>PRINT SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINT_TYPE__c</fullName>
        <label>PRINT TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_CODE__c</fullName>
        <label>PROD CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_1000pcs__c</fullName>
        <formula>Price_100pcs__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price/1000pcs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_1000pcs_del__c</fullName>
        <label>Price/1000pcs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_100pcs__c</fullName>
        <label>Price/100pcs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book_Status__c</fullName>
        <formula>Text(Price_Specification_Book__r.Book_Status__c)</formula>
        <label>Price Book Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Specification_Book__c</fullName>
        <label>Price &amp; Specification Book</label>
        <referenceTo>Price_Specification_Book__c</referenceTo>
        <relationshipLabel>Price &amp; Specification Book Products</relationshipLabel>
        <relationshipName>Price_Specification_Book_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Print_Shop__c</fullName>
        <label>PrintShop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FVG HangZhou</fullName>
                </value>
                <value>
                    <fullName>LH Shenzhen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <formula>TEXT(Product_Unique_ID__r.Product_Type__c)</formula>
        <inlineHelpText>Lookup Product Master Product Category</inlineHelpText>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adults</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
                <value>
                    <fullName>Satin</fullName>
                </value>
                <value>
                    <fullName>Wood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product_Unique_ID__r.Product_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE( &quot;servlet/servlet.FileDownload?file=0159000000Et9XW&quot;, &quot;image from Documents tab&quot;)</formula>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Size__c</fullName>
        <formula>Product_Unique_ID__r.Size_Length_e_g_17_43cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <formula>TEXT( Product_Unique_ID__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <formula>TEXT(Product_Unique_ID__r.Sub_category__c)</formula>
        <inlineHelpText>Lookup Product Master Sub-category</inlineHelpText>
        <label>Product Sub-Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unique_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Unique ID</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Price &amp; Specification Book Products</relationshipLabel>
        <relationshipName>Price_Specification_Book_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_image_url__c</fullName>
        <label>Product image url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RECOMMENED_ADDITION_RATE__c</fullName>
        <label>RECOMMENED ADDITION RATE (%)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVISION_DATE__c</fullName>
        <label>REVISION DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVISION_NUMBER__c</fullName>
        <label>REVISION NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFIDSerial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFIDSerial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUBBER_GRADE__c</fullName>
        <label>RUBBER GRADE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUBBER_SUPPLIER__c</fullName>
        <label>RUBBER SUPPLIER</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUBBER_WEIGHT_g__c</fullName>
        <label>RUBBER WEIGHT (g)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RetailerBrand__c</fullName>
        <label>RetailerBrand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BEK</fullName>
                </value>
                <value>
                    <fullName>BJW</fullName>
                </value>
                <value>
                    <fullName>JCP</fullName>
                </value>
                <value>
                    <fullName>MMN</fullName>
                </value>
                <value>
                    <fullName>SHO</fullName>
                </value>
                <value>
                    <fullName>WM</fullName>
                </value>
                <value>
                    <fullName>NAU</fullName>
                </value>
                <value>
                    <fullName>KOH</fullName>
                </value>
                <value>
                    <fullName>KIH</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OUS</fullName>
                </value>
                <value>
                    <fullName>GU_APPAREL</fullName>
                </value>
                <value>
                    <fullName>GU_KIDS</fullName>
                </value>
                <value>
                    <fullName>GU_SHOES</fullName>
                </value>
                <value>
                    <fullName>GU_LINGERIE</fullName>
                </value>
                <value>
                    <fullName>GU_DEPT7AL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer_Brand__c</fullName>
        <formula>Retailer_Code__r.Retailer_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Price &amp; Specification Book Products</relationshipLabel>
        <relationshipName>Price_Specification_Book_Products</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>